--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hub31 | AI Agent Service</title>
+    <title>Hub31 | AI Agent</title>
   </head>
-  <body style="margin: 0; background-color: #fff;">
+  <body>
     <div id="root"></div>
   </body>
 </html>
